--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/plugin-transform-runtime": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
     "@babel/runtime": "^7.23.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^6.3.0"
   }
